--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/da.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/da.json
@@ -35,8 +35,11 @@
     "HeaderConfirmation": "Confirmation",
     "MessageKeyUpdated": "Thank you. Your supporter key has been updated.",
     "MessageKeyRemoved": "Thank you. Your supporter key has been removed.",
+    "HeaderSupportTheTeam": "Support the Emby Team",
+    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
     "TitleLiveTV": "Direkte TV",
     "TitleSync": "Sync",
+    "ButtonDonate": "Donate",
     "ErrorLaunchingChromecast": "There was an error launching chromecast. Please ensure your device is connected to your wireless network.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
@@ -62,10 +65,10 @@
     "LabelMovie": "Movie",
     "LabelMusicVideo": "Music Video",
     "LabelEpisode": "Episode",
-    "LabelSeries": "Series",
+    "LabelSeries": "Serier",
     "LabelStopping": "Stopping",
     "LabelCancelled": "(cancelled)",
-    "LabelFailed": "(failed)",
+    "LabelFailed": "(fejlede)",
     "ButtonHelp": "Help",
     "ButtonSave": "Gem",
     "ButtonDownload": "Download",
@@ -79,8 +82,8 @@
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Collection",
-    "HeaderAddToCollection": "Add to Collection",
-    "NewCollectionNameExample": "Example: Star Wars Collection",
+    "HeaderAddToCollection": "Tilf\u00f8j til samling",
+    "NewCollectionNameExample": "Eksempel: Star Wars Collection",
     "OptionSearchForInternetMetadata": "Search the internet for artwork and metadata",
     "LabelSelectCollection": "Select collection:",
     "HeaderDevices": "Devices",
@@ -138,7 +141,7 @@
     "ButtonPlay": "Afspil",
     "ButtonEdit": "Rediger",
     "ButtonQueue": "Queue",
-    "ButtonPlayTrailer": "Play trailer",
+    "ButtonPlayTrailer": "Afspil trailer",
     "ButtonPlaylist": "Playlist",
     "ButtonPreviousTrack": "Previous Track",
     "LabelEnabled": "Enabled",
@@ -174,6 +177,9 @@
     "OptionThursday": "Torsdag",
     "OptionFriday": "Fredag",
     "OptionSaturday": "L\u00f8rdag",
+    "OptionEveryday": "Every day",
+    "OptionWeekend": "Weekends",
+    "OptionWeekday": "Weekdays",
     "HeaderConfirmDeletion": "Confirm Deletion",
     "MessageConfirmPathSubstitutionDeletion": "Are you sure you wish to delete this path substitution?",
     "LiveTvUpdateAvailable": "(Update available)",
@@ -394,7 +400,7 @@
     "TabAdvanced": "Advanceret",
     "TabHelp": "Help",
     "TabScheduledTasks": "Scheduled Tasks",
-    "ButtonFullscreen": "Fullscreen",
+    "ButtonFullscreen": "Fuld sk\u00e6rm",
     "ButtonAudioTracks": "Audio Tracks",
     "ButtonSubtitles": "Undertekster",
     "ButtonScenes": "Scener",
@@ -467,7 +473,7 @@
     "PersonTypePerson": "Person",
     "LabelTitleDisplayOrder": "Title display order:",
     "OptionSortName": "Sort name",
-    "OptionReleaseDate": "Release date",
+    "OptionReleaseDate": "Udgivelsesdato",
     "LabelSeasonNumber": "Season number:",
     "LabelDiscNumber": "Disc number",
     "LabelParentNumber": "Parent number",
@@ -496,14 +502,14 @@
     "LabelContentTypeValue": "Content type: {0}",
     "LabelPathSubstitutionHelp": "Optional: Path substitution can map server paths to network shares that clients can access for direct playback.",
     "FolderTypeUnset": "Unset (mixed content)",
-    "FolderTypeMovies": "Movies",
-    "FolderTypeMusic": "Music",
-    "FolderTypeAdultVideos": "Adult videos",
-    "FolderTypePhotos": "Photos",
-    "FolderTypeMusicVideos": "Music videos",
-    "FolderTypeHomeVideos": "Home videos",
-    "FolderTypeGames": "Games",
-    "FolderTypeBooks": "Books",
+    "FolderTypeMovies": "FIlm",
+    "FolderTypeMusic": "Musik",
+    "FolderTypeAdultVideos": "Voksenfilm",
+    "FolderTypePhotos": "Fotos",
+    "FolderTypeMusicVideos": "Musikvideoer",
+    "FolderTypeHomeVideos": "Hjemmevideoer",
+    "FolderTypeGames": "Spil",
+    "FolderTypeBooks": "B\u00f8ger",
     "FolderTypeTvShows": "TV",
     "TabMovies": "Film",
     "TabSeries": "Serier",
@@ -611,7 +617,7 @@
     "HeaderAlbums": "Albums",
     "HeaderGames": "Games",
     "HeaderBooks": "Books",
-    "HeaderEpisodes": "Episodes",
+    "HeaderEpisodes": "Afsnit",
     "HeaderSeasons": "Seasons",
     "HeaderTracks": "Tracks",
     "HeaderItems": "Items",
@@ -649,7 +655,7 @@
     "MediaInfoStreamTypeEmbeddedImage": "Embedded Image",
     "MediaInfoRefFrames": "Ref frames",
     "TabPlayback": "Playback",
-    "TabNotifications": "Notifications",
+    "TabNotifications": "Notifikationer",
     "TabExpert": "Expert",
     "HeaderSelectCustomIntrosPath": "Select Custom Intros Path",
     "HeaderRateAndReview": "Rate and Review",
