--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
@@ -35,8 +35,11 @@
     "HeaderConfirmation": "Best\u00e4tigung",
     "MessageKeyUpdated": "Danke. Dein Unterst\u00fctzerschl\u00fcssel wurde aktualisiert.",
     "MessageKeyRemoved": "Danke. Ihr Unterst\u00fctzerschl\u00fcssel wurde entfernt.",
+    "HeaderSupportTheTeam": "Unterst\u00fctzen Sie das Emby Team",
+    "TextEnjoyBonusFeatures": "Erleben Sie Bonus Funktionen",
     "TitleLiveTV": "Live-TV",
     "TitleSync": "Synchronisation",
+    "ButtonDonate": "Spenden",
     "ErrorLaunchingChromecast": "W\u00e4hrend des startens von Chromecast ist ein Fehler aufgetreten. Bitte stelle sicher, dass dein Ger\u00e4te mit dem WLAN verbunden ist.",
     "MessageErrorLoadingSupporterInfo": "Es trat ein Fehler beim laden der Unterst\u00fctzer-Informationen auf. Bitte versuchen Sie es sp\u00e4ter erneut.",
     "MessageLinkYourSupporterKey": "Verbinden Sie Ihren Unterst\u00fctzer-Schl\u00fcssel mit bis zu {0} Emby Connect Benutzern um kostenfreien Zugriff auf die folgenden Apps zu erhalten:",
@@ -120,7 +123,7 @@
     "MessagePlaybackErrorNotAllowed": "Sie sind nicht befugt diese Inhalte wiederzugeben. Bitte kontaktieren Sie Ihren Systemadministrator f\u00fcr weitere Details.",
     "MessagePlaybackErrorNoCompatibleStream": "Es sind aktuell keine kompatiblen Streams verf\u00fcgbar. Bitte versuchen Sie es sp\u00e4ter erneut.",
     "MessagePlaybackErrorRateLimitExceeded": "Ihr Wiedergabelimit wurde \u00fcberschritten. Bitte kontaktieren Sie Ihren Systemadministrator f\u00fcr weitere Details.",
-    "MessagePlaybackErrorPlaceHolder": "The content chosen is not playable from this device.",
+    "MessagePlaybackErrorPlaceHolder": "Der gew\u00e4hlte Inhalt kann auf diesem Ger\u00e4t nicht abgespielt werden.",
     "HeaderSelectAudio": "W\u00e4hle Audio",
     "HeaderSelectSubtitles": "W\u00f6hle Untertitel",
     "ButtonMarkForRemoval": "Entferne von Ger\u00e4t",
@@ -174,6 +177,9 @@
     "OptionThursday": "Donnerstag",
     "OptionFriday": "Freitag",
     "OptionSaturday": "Samstag",
+    "OptionEveryday": "T\u00e4glich",
+    "OptionWeekend": "Weekends",
+    "OptionWeekday": "Weekdays",
     "HeaderConfirmDeletion": "Best\u00e4tige L\u00f6schung",
     "MessageConfirmPathSubstitutionDeletion": "Bist du dir sicher die Pfadsubstitution l\u00f6schen zu wollen?",
     "LiveTvUpdateAvailable": "(Update verf\u00fcgbar)",
