--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/el.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/el.json
@@ -23,8 +23,8 @@
     "PasswordSaved": "\u039f \u03ba\u03c9\u03b4\u03b9\u03ba\u03cc\u03c2 \u03c0\u03c1\u03cc\u03c3\u03b2\u03b1\u03c3\u03b7\u03c2 \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03cd\u03c4\u03b7\u03ba\u03b5",
     "PasswordMatchError": "\u039f \u03ba\u03c9\u03b4\u03b9\u03ba\u03cc\u03c2 \u03c0\u03c1\u03cc\u03c3\u03b2\u03b1\u03c3\u03b7\u03c2 \u03ba\u03b1\u03b9 \u03c4\u03bf\u03bd \u03ba\u03c9\u03b4\u03b9\u03ba\u03cc \u03b5\u03c0\u03b9\u03b2\u03b5\u03b2\u03b1\u03af\u03c9\u03c3\u03b7\u03c2 \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03c4\u03b1\u03b9\u03c1\u03b9\u03ac\u03b6\u03bf\u03c5\u03bd",
     "OptionRelease": "\u0397 \u03b5\u03c0\u03af\u03c3\u03b7\u03bc\u03b7 \u03ad\u03ba\u03b4\u03bf\u03c3\u03b7",
-    "OptionBeta": "\u03b2\u03ae\u03c4\u03b1",
-    "OptionDev": "\u03b1\u03bd\u03ac\u03c0\u03c4\u03c5\u03be\u03b7 (\u03b1\u03c3\u03c4\u03b1\u03b8\u03ae\u03c2)",
+    "OptionBeta": "\u0394\u03bf\u03ba\u03b9\u03bc\u03b1\u03c3\u03c4\u03b9\u03ba\u03ae",
+    "OptionDev": "\u0391\u03bd\u03ac\u03c0\u03c4\u03c5\u03be\u03b7 (\u03b1\u03c3\u03c4\u03b1\u03b8\u03ae\u03c2)",
     "UninstallPluginHeader": "\u03b1\u03c0\u03b5\u03b3\u03ba\u03b1\u03c4\u03ac\u03c3\u03c4\u03b7\u03c3\u03b5\u03c4\u03b5 \u03c4\u03bf plugin",
     "UninstallPluginConfirmation": "\u0395\u03af\u03c3\u03c4\u03b5 \u03c3\u03af\u03b3\u03bf\u03c5\u03c1\u03bf\u03b9 \u03cc\u03c4\u03b9 \u03b8\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03b1\u03c0\u03b5\u03b3\u03ba\u03b1\u03c4\u03b1\u03c3\u03c4\u03ae\u03c3\u03b5\u03c4\u03b5;",
     "NoPluginConfigurationMessage": "\u0391\u03c5\u03c4\u03cc \u03c4\u03bf plugin \u03ad\u03c7\u03b5\u03b9 \u03c4\u03af\u03c0\u03bf\u03c4\u03b1 \u03bd\u03b1 \u03b4\u03b9\u03b1\u03bc\u03bf\u03c1\u03c6\u03ce\u03c3\u03b5\u03c4\u03b5",
@@ -35,8 +35,11 @@
     "HeaderConfirmation": "Confirmation",
     "MessageKeyUpdated": "Thank you. Your supporter key has been updated.",
     "MessageKeyRemoved": "Thank you. Your supporter key has been removed.",
+    "HeaderSupportTheTeam": "Support the Emby Team",
+    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
     "TitleLiveTV": "Live TV",
     "TitleSync": "Sync",
+    "ButtonDonate": "Donate",
     "ErrorLaunchingChromecast": "There was an error launching chromecast. Please ensure your device is connected to your wireless network.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
@@ -62,12 +65,12 @@
     "LabelMovie": "Movie",
     "LabelMusicVideo": "Music Video",
     "LabelEpisode": "Episode",
-    "LabelSeries": "Series",
+    "LabelSeries": "\u03a3\u03b5\u03b9\u03c1\u03ad\u03c2",
     "LabelStopping": "Stopping",
     "LabelCancelled": "(cancelled)",
-    "LabelFailed": "(failed)",
-    "ButtonHelp": "Help",
-    "ButtonSave": "\u0391\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03cd\u03c3\u03c4\u03b5",
+    "LabelFailed": "\u0391\u03c0\u03bf\u03c4\u03c5\u03c7\u03af\u03b1",
+    "ButtonHelp": "\u0392\u03bf\u03ae\u03b8\u03b5\u03b9\u03b1",
+    "ButtonSave": "\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7",
     "ButtonDownload": "Download",
     "SyncJobStatusQueued": "Queued",
     "SyncJobStatusConverting": "Converting",
@@ -79,10 +82,10 @@
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Collection",
-    "HeaderAddToCollection": "Add to Collection",
-    "NewCollectionNameExample": "Example: Star Wars Collection",
-    "OptionSearchForInternetMetadata": "Search the internet for artwork and metadata",
-    "LabelSelectCollection": "Select collection:",
+    "HeaderAddToCollection": "\u03a0\u03c1\u03cc\u03c3\u03b8\u03b5\u03c3\u03b5 \u03c3\u03c4\u03b7\u03bd \u03a3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae",
+    "NewCollectionNameExample": "\u03a0\u03b1\u03c1\u03ac\u03b4\u03b5\u03b9\u03b3\u03bc\u03b1: \u03a3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae \"\u03a0\u03cc\u03bb\u03b5\u03bc\u03bf\u03c2 \u03c4\u03c9\u03bd \u0386\u03c3\u03c4\u03c1\u03c9\u03bd\"",
+    "OptionSearchForInternetMetadata": "\u0391\u03bd\u03b1\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7 \u03c3\u03c4\u03bf \u03b4\u03b9\u03b1\u03b4\u03af\u03ba\u03c4\u03c5\u03bf \u03b3\u03b9\u03b1 \u03b5\u03be\u03ce\u03c6\u03c5\u03bb\u03bb\u03bf \u03ba\u03b1\u03b9 \u03c0\u03bb\u03b7\u03c1\u03bf\u03c6\u03bf\u03c1\u03af\u03b5\u03c2",
+    "LabelSelectCollection": "\u0395\u03c0\u03ad\u03bb\u03b5\u03be\u03b5 \u03c3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae:",
     "HeaderDevices": "Devices",
     "ButtonScheduledTasks": "Scheduled tasks",
     "MessageItemsAdded": "Items added",
@@ -93,14 +96,14 @@
     "LabelSyncNoTargetsHelp": "It looks like you don't currently have any apps that support sync.",
     "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
     "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
-    "ButtonTakeTheTour": "Take the tour",
+    "ButtonTakeTheTour": "\u039a\u03ac\u03bd\u03c4\u03b5 \u03c4\u03b7\u03bd \u039e\u03b5\u03bd\u03ac\u03b3\u03b7\u03c3\u03b7",
     "HeaderWelcomeBack": "Welcome back!",
-    "TitlePlugins": "Plugins",
+    "TitlePlugins": "\u03a0\u03c1\u03cc\u03c3\u03b8\u03b5\u03c4\u03b1",
     "ButtonTakeTheTourToSeeWhatsNew": "Take the tour to see what's new",
     "MessageNoSyncJobsFound": "No sync jobs found. Create sync jobs using the Sync buttons found throughout the web interface.",
     "HeaderLibraryAccess": "Library Access",
     "HeaderChannelAccess": "Channel Access",
-    "HeaderDeviceAccess": "Device Access",
+    "HeaderDeviceAccess": "\u03a0\u03c1\u03cc\u03c3\u03b2\u03b1\u03c3\u03b7 \u03a3\u03c5\u03c3\u03ba\u03b5\u03c5\u03ae\u03c2",
     "HeaderSelectDevices": "Select Devices",
     "ButtonCancelItem": "Cancel item",
     "ButtonQueueForRetry": "Queue for retry",
@@ -133,14 +136,14 @@
     "ButtonMute": "Mute",
     "ButtonUnmute": "Unmute",
     "ButtonStop": "Stop",
-    "ButtonNextTrack": "Next Track",
+    "ButtonNextTrack": "\u0395\u03c0\u03cc\u03bc\u03b5\u03bd\u03bf \u039a\u03bf\u03bc\u03bc\u03ac\u03c4\u03b9",
     "ButtonPause": "Pause",
     "ButtonPlay": "Play",
     "ButtonEdit": "Edit",
     "ButtonQueue": "Queue",
-    "ButtonPlayTrailer": "Play trailer",
+    "ButtonPlayTrailer": "\u0391\u03bd\u03b1\u03c0\u03b1\u03c1\u03b1\u03b3\u03c9\u03b3\u03ae trailer",
     "ButtonPlaylist": "Playlist",
-    "ButtonPreviousTrack": "Previous Track",
+    "ButtonPreviousTrack": "\u03a0\u03c1\u03bf\u03b7\u03b3\u03bf\u03cd\u03bc\u03b5\u03bd\u03bf \u039a\u03bf\u03bc\u03bc\u03ac\u03c4\u03b9",
     "LabelEnabled": "Enabled",
     "LabelDisabled": "Disabled",
     "ButtonMoreInformation": "More Information",
@@ -174,6 +177,9 @@
     "OptionThursday": "Thursday",
     "OptionFriday": "Friday",
     "OptionSaturday": "Saturday",
+    "OptionEveryday": "Every day",
+    "OptionWeekend": "Weekends",
+    "OptionWeekday": "Weekdays",
     "HeaderConfirmDeletion": "Confirm Deletion",
     "MessageConfirmPathSubstitutionDeletion": "Are you sure you wish to delete this path substitution?",
     "LiveTvUpdateAvailable": "(Update available)",
@@ -195,7 +201,7 @@
     "MessagePleaseSelectTwoItems": "Please select at least two items.",
     "MessageTheFollowingItemsWillBeGrouped": "The following titles will be grouped into one item:",
     "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
-    "HeaderResume": "\u03a3\u03c5\u03bd\u03b5\u03c7\u03af\u03c3\u03b5\u03b9 ",
+    "HeaderResume": "\u0395\u03c0\u03b1\u03bd\u03b5\u03ba\u03ba\u03af\u03bd\u03b7\u03c3\u03b7",
     "HeaderMyViews": "My Views",
     "HeaderLibraryFolders": "Media Folders",
     "HeaderLatestMedia": "Latest Media",
@@ -266,7 +272,7 @@
     "MessageAreYouSureDeleteSubtitles": "Are you sure you wish to delete this subtitle file?",
     "ButtonRemoteControl": "Remote Control",
     "HeaderLatestTvRecordings": "Latest Recordings",
-    "ButtonOk": "\u03b5\u03bd\u03c4\u03ac\u03be\u03b5\u03b9",
+    "ButtonOk": "\u0395\u03bd\u03c4\u03ac\u03be\u03b5\u03b9",
     "ButtonCancel": "\u0391\u03ba\u03cd\u03c1\u03c9\u03c3\u03b7 ",
     "ButtonRefresh": "Refresh",
     "LabelCurrentPath": "Current path:",
@@ -298,7 +304,7 @@
     "HeaderArtist": "Artist",
     "LabelAddedOnDate": "Added {0}",
     "ButtonStart": "Start",
-    "HeaderChannels": "Channels",
+    "HeaderChannels": "\u039a\u03b1\u03bd\u03ac\u03bb\u03b9\u03b1",
     "HeaderMediaFolders": "Media Folders",
     "HeaderBlockItemsWithNoRating": "Block content with no rating information:",
     "OptionBlockOthers": "Others",
@@ -383,7 +389,7 @@
     "LabelPackageInstallCompleted": "{0} installation completed.",
     "LabelPackageInstallFailed": "{0} installation failed.",
     "LabelPackageInstallCancelled": "{0} installation cancelled.",
-    "TabServer": "Server",
+    "TabServer": "\u0394\u03b9\u03b1\u03ba\u03bf\u03bc\u03b9\u03c3\u03c4\u03ae\u03c2",
     "TabUsers": "Users",
     "TabLibrary": "Library",
     "TabMetadata": "Metadata",
@@ -394,20 +400,20 @@
     "TabAdvanced": "Advanced",
     "TabHelp": "Help",
     "TabScheduledTasks": "Scheduled Tasks",
-    "ButtonFullscreen": "Fullscreen",
-    "ButtonAudioTracks": "Audio Tracks",
+    "ButtonFullscreen": "\u039f\u03bb\u03cc\u03ba\u03bb\u03b7\u03c1\u03b7 \u03bf\u03b8\u03cc\u03bd\u03b7",
+    "ButtonAudioTracks": "\u0397\u03c7\u03b7\u03c4\u03b9\u03ba\u03ac \u039a\u03cc\u03bc\u03bc\u03ac\u03c4\u03b9\u03b1",
     "ButtonSubtitles": "Subtitles",
     "ButtonScenes": "Scenes",
     "ButtonQuality": "Quality",
     "HeaderNotifications": "Notifications",
     "HeaderSelectPlayer": "Select Player:",
-    "ButtonSelect": "Select",
-    "ButtonNew": "New",
+    "ButtonSelect": "\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae",
+    "ButtonNew": "\u039d\u03ad\u03bf",
     "MessageInternetExplorerWebm": "For best results with Internet Explorer please install the WebM playback plugin.",
     "HeaderVideoError": "Video Error",
     "ButtonAddToPlaylist": "Add to playlist",
     "HeaderAddToPlaylist": "Add to Playlist",
-    "LabelName": "Name:",
+    "LabelName": "\u038c\u03bd\u03bf\u03bc\u03b1:",
     "ButtonSubmit": "Submit",
     "LabelSelectPlaylist": "Playlist:",
     "OptionNewPlaylist": "New playlist...",
@@ -418,9 +424,9 @@
     "ButtonRemoveFromPlaylist": "Remove from playlist",
     "HeaderSpecials": "Specials",
     "HeaderTrailers": "Trailers",
-    "HeaderAudio": "Audio",
+    "HeaderAudio": "\u0389\u03c7\u03bf\u03c2",
     "HeaderResolution": "Resolution",
-    "HeaderVideo": "Video",
+    "HeaderVideo": "\u0392\u03af\u03bd\u03c4\u03b5\u03bf",
     "HeaderRuntime": "Runtime",
     "HeaderCommunityRating": "Community rating",
     "HeaderParentalRating": "Parental rating",
@@ -436,11 +442,11 @@
     "HeaderEmbeddedImage": "Embedded image",
     "HeaderTrack": "Track",
     "HeaderDisc": "Disc",
-    "OptionMovies": "Movies",
+    "OptionMovies": "\u03a4\u03b1\u03b9\u03bd\u03af\u03b5\u03c2",
     "OptionCollections": "Collections",
     "OptionSeries": "Series",
     "OptionSeasons": "Seasons",
-    "OptionEpisodes": "Episodes",
+    "OptionEpisodes": "\u0395\u03c0\u03b5\u03b9\u03c3\u03cc\u03b4\u03b9\u03b1",
     "OptionGames": "Games",
     "OptionGameSystems": "Game systems",
     "OptionMusicArtists": "Music artists",
@@ -467,7 +473,7 @@
     "PersonTypePerson": "Person",
     "LabelTitleDisplayOrder": "Title display order:",
     "OptionSortName": "Sort name",
-    "OptionReleaseDate": "Release date",
+    "OptionReleaseDate": "\u03a0\u03c1\u03ce\u03c4\u03b7 \u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae",
     "LabelSeasonNumber": "Season number:",
     "LabelDiscNumber": "Disc number",
     "LabelParentNumber": "Parent number",
@@ -496,22 +502,22 @@
     "LabelContentTypeValue": "Content type: {0}",
     "LabelPathSubstitutionHelp": "Optional: Path substitution can map server paths to network shares that clients can access for direct playback.",
     "FolderTypeUnset": "Unset (mixed content)",
-    "FolderTypeMovies": "Movies",
-    "FolderTypeMusic": "Music",
-    "FolderTypeAdultVideos": "Adult videos",
-    "FolderTypePhotos": "Photos",
-    "FolderTypeMusicVideos": "Music videos",
-    "FolderTypeHomeVideos": "Home videos",
-    "FolderTypeGames": "Games",
-    "FolderTypeBooks": "Books",
-    "FolderTypeTvShows": "TV",
-    "TabMovies": "Movies",
+    "FolderTypeMovies": "\u03a4\u03b1\u03b9\u03bd\u03af\u03b5\u03c2",
+    "FolderTypeMusic": "\u039c\u03bf\u03c5\u03c3\u03b9\u03ba\u03ae",
+    "FolderTypeAdultVideos": "\u03a4\u03b1\u03b9\u03bd\u03af\u03b5\u03c2 \u0395\u03bd\u03b7\u03bb\u03af\u03ba\u03c9\u03bd",
+    "FolderTypePhotos": "\u03a6\u03c9\u03c4\u03bf\u03b3\u03c1\u03b1\u03c6\u03af\u03b5\u03c2",
+    "FolderTypeMusicVideos": "\u039c\u03bf\u03c5\u03c3\u03b9\u03ba\u03ac \u0392\u03af\u03bd\u03c4\u03b5\u03bf",
+    "FolderTypeHomeVideos": "\u03a0\u03c1\u03bf\u03c3\u03c9\u03c0\u03b9\u03ba\u03ac \u0392\u03af\u03bd\u03c4\u03b5\u03bf",
+    "FolderTypeGames": "\u03a0\u03b1\u03b9\u03c7\u03bd\u03af\u03b4\u03b9\u03b1",
+    "FolderTypeBooks": "\u0392\u03b9\u03b2\u03bb\u03af\u03b1",
+    "FolderTypeTvShows": "\u03a4\u03b7\u03bb\u03b5\u03cc\u03c1\u03b1\u03c3\u03b7",
+    "TabMovies": "\u03a4\u03b1\u03b9\u03bd\u03af\u03b5\u03c2",
     "TabSeries": "Series",
     "TabEpisodes": "\u0395\u03c0\u03b5\u03b9\u03c3\u03cc\u03b4\u03b9\u03b1",
     "TabTrailers": "Trailers",
-    "TabGames": "Games",
-    "TabAlbums": "\u03ac\u03bb\u03bc\u03c0\u03bf\u03c5\u03bc",
-    "TabSongs": "\u03c4\u03c1\u03b1\u03b3\u03bf\u03cd\u03b4\u03b9\u03b1",
+    "TabGames": "\u03a0\u03b1\u03b9\u03c7\u03bd\u03af\u03b4\u03b9\u03b1",
+    "TabAlbums": "\u0386\u03bb\u03bc\u03c0\u03bf\u03c5\u03bc",
+    "TabSongs": "\u03a4\u03c1\u03b1\u03b3\u03bf\u03cd\u03b4\u03b9\u03b1",
     "TabMusicVideos": "\u039c\u03bf\u03c5\u03c3\u03b9\u03ba\u03ac \u03b2\u03af\u03bd\u03c4\u03b5\u03bf",
     "BirthPlaceValue": "Birth place: {0}",
     "DeathDateValue": "Died: {0}",
@@ -611,7 +617,7 @@
     "HeaderAlbums": "Albums",
     "HeaderGames": "Games",
     "HeaderBooks": "Books",
-    "HeaderEpisodes": "Episodes",
+    "HeaderEpisodes": "\u0395\u03c0\u03b5\u03b9\u03c3\u03cc\u03b4\u03b9\u03b1",
     "HeaderSeasons": "Seasons",
     "HeaderTracks": "Tracks",
     "HeaderItems": "Items",
@@ -649,7 +655,7 @@
     "MediaInfoStreamTypeEmbeddedImage": "Embedded Image",
     "MediaInfoRefFrames": "Ref frames",
     "TabPlayback": "Playback",
-    "TabNotifications": "Notifications",
+    "TabNotifications": "\u0395\u03b9\u03b4\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03b9\u03c2",
     "TabExpert": "Expert",
     "HeaderSelectCustomIntrosPath": "Select Custom Intros Path",
     "HeaderRateAndReview": "Rate and Review",
