--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es.json
@@ -35,8 +35,11 @@
     "HeaderConfirmation": "Confirmaci\u00f3n",
     "MessageKeyUpdated": "Gracias. Su clave de seguidor ha sido actualizada.",
     "MessageKeyRemoved": "Gracias. Su clave de seguidor ha sido eliminada.",
+    "HeaderSupportTheTeam": "Support the Emby Team",
+    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
     "TitleLiveTV": "Tv en vivo",
     "TitleSync": "Sync",
+    "ButtonDonate": "Donate",
     "ErrorLaunchingChromecast": "Ha habido un error al lanzar chromecast. Asegurese que su dispositivo est\u00e1 conectado a su red inal\u00e1mbrica.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
@@ -174,6 +177,9 @@
     "OptionThursday": "Jueves",
     "OptionFriday": "Viernes",
     "OptionSaturday": "S\u00e1bado",
+    "OptionEveryday": "Every day",
+    "OptionWeekend": "Weekends",
+    "OptionWeekday": "Weekdays",
     "HeaderConfirmDeletion": "Confirmar borrado",
     "MessageConfirmPathSubstitutionDeletion": "\u00bfEst\u00e1 seguro que desea borrar esta ruta de sustituci\u00f3n?",
     "LiveTvUpdateAvailable": "(Actualizaci\u00f3n disponible)",
