--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -35,8 +35,11 @@
     "HeaderConfirmation": "Confirmaci\u00f3n",
     "MessageKeyUpdated": "Gracias. Su clave de aficionado ha sido actualizada.",
     "MessageKeyRemoved": "Gracias. Su clave de aficionado ha sido eliminada.",
+    "HeaderSupportTheTeam": "Apoye al equipo de Emby",
+    "TextEnjoyBonusFeatures": "Disfruta de Caracter\u00edsticas Premium",
     "TitleLiveTV": "TV en Vivo",
     "TitleSync": "Sinc",
+    "ButtonDonate": "Donar",
     "ErrorLaunchingChromecast": "Hubo un error iniciando chromecast. Por favor aseg\u00farate de que tu dispositivo este conectado a tu red inalambrica",
     "MessageErrorLoadingSupporterInfo": "Se present\u00f3 un error al cargar la informaci\u00f3n del aficionado. Por favor int\u00e9ntelo m\u00e1s tarde.",
     "MessageLinkYourSupporterKey": "Enlaza tu clave de aficionado con hasta {0} miembros de Emby Connect para disfrutar de acceso gratuito a la siguientes aplicaciones:",
@@ -120,7 +123,7 @@
     "MessagePlaybackErrorNotAllowed": "Actualmente no esta autorizado para reproducir este contenido. Por favor contacte a su administrador de sistema para mas informaci\u00f3n.",
     "MessagePlaybackErrorNoCompatibleStream": "No hay streams compatibles en este en este momento. Por favor intente de nuevo mas tarde.",
     "MessagePlaybackErrorRateLimitExceeded": "Su limite de transferencia ha sido excedido. Por favor contacte a su administrador de sistema para mas informaci\u00f3n.",
-    "MessagePlaybackErrorPlaceHolder": "The content chosen is not playable from this device.",
+    "MessagePlaybackErrorPlaceHolder": "No es posible reproducir el contenido seleccionado en este dispositivo.",
     "HeaderSelectAudio": "Seleccionar Audio",
     "HeaderSelectSubtitles": "Seleccionar Subtitulos",
     "ButtonMarkForRemoval": "Remover de dispositivo",
@@ -174,6 +177,9 @@
     "OptionThursday": "Jueves",
     "OptionFriday": "Viernes",
     "OptionSaturday": "S\u00e1bado",
+    "OptionEveryday": "Todos los d\u00edas",
+    "OptionWeekend": "Fines de Semana",
+    "OptionWeekday": "D\u00edas de semana",
     "HeaderConfirmDeletion": "Confirmar Eliminaci\u00f3n",
     "MessageConfirmPathSubstitutionDeletion": "\u00bfEst\u00e1 seguro de querer eliminar esta ruta alternativa?",
     "LiveTvUpdateAvailable": "(Actualizaci\u00f3n disponible)",
