--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
@@ -35,8 +35,11 @@
     "HeaderConfirmation": "Confirmation",
     "MessageKeyUpdated": "Merci. Votre cl\u00e9 de supporteur a \u00e9t\u00e9 mise \u00e0 jour.",
     "MessageKeyRemoved": "Merci. Votre cl\u00e9 de supporteur a \u00e9t\u00e9 supprim\u00e9e.",
+    "HeaderSupportTheTeam": "Aidez l'\u00e9quipe Emby",
+    "TextEnjoyBonusFeatures": "Profitez bien des fonctionnalit\u00e9s bonus",
     "TitleLiveTV": "TV en direct",
     "TitleSync": "Sync.",
+    "ButtonDonate": "Faire un don",
     "ErrorLaunchingChromecast": "Une erreur a \u00e9t\u00e9 rencontr\u00e9e lors du lancement de Chromecast. Veuillez vous assurer que votre appareil est bien connect\u00e9 \u00e0 votre r\u00e9seau sans-fil.",
     "MessageErrorLoadingSupporterInfo": "Il y a eu une erreur lors du chargement des informations de supporter. Veuillez r\u00e9essayer plus tard.",
     "MessageLinkYourSupporterKey": "Liez votre cl\u00e9 de supporteur avec un maximum de {0} membres Emby Connect pour b\u00e9n\u00e9ficier de l'acc\u00e8s gratuit aux applications suivantes :",
@@ -120,7 +123,7 @@
     "MessagePlaybackErrorNotAllowed": "Vous n'\u00eates pas autoris\u00e9 \u00e0 lire ce contenu. Veuillez contacter votre administrateur syst\u00e8me pour plus de d\u00e9tails.",
     "MessagePlaybackErrorNoCompatibleStream": "Aucun flux compatible n'est actuellement disponible. Veuillez r\u00e9essayer plus tard.",
     "MessagePlaybackErrorRateLimitExceeded": "Vous avez d\u00e9pass\u00e9 votre limite de lecture. Veuillez contacter votre administrateur syst\u00e8me pour plus de d\u00e9tails.",
-    "MessagePlaybackErrorPlaceHolder": "The content chosen is not playable from this device.",
+    "MessagePlaybackErrorPlaceHolder": "Impossible de lire le contenu choisi sur cet appareil",
     "HeaderSelectAudio": "S\u00e9lectionner audio",
     "HeaderSelectSubtitles": "S\u00e9lectionner sous-titres",
     "ButtonMarkForRemoval": "Supprimer de l'appareil",
@@ -174,6 +177,9 @@
     "OptionThursday": "Jeudi",
     "OptionFriday": "Vendredi",
     "OptionSaturday": "Samedi",
+    "OptionEveryday": "Tous les jours",
+    "OptionWeekend": "Week-ends",
+    "OptionWeekday": "Jours de semaine",
     "HeaderConfirmDeletion": "Confirmer la suppression",
     "MessageConfirmPathSubstitutionDeletion": "\u00cates-vous s\u00fbr de vouloir supprimer cette substitution de chemin d'acc\u00e8s?",
     "LiveTvUpdateAvailable": "(Mise \u00e0 jour disponible)",
