--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
@@ -35,8 +35,11 @@
     "HeaderConfirmation": "Conferma",
     "MessageKeyUpdated": "Grazie. La vostra chiave supporter \u00e8 stato aggiornato.",
     "MessageKeyRemoved": "Grazie. La vostra chiave supporter \u00e8 stata rimossa.",
+    "HeaderSupportTheTeam": "Supporta il Team di Emby",
+    "TextEnjoyBonusFeatures": "Goditi le caratteristiche aggiuntive",
     "TitleLiveTV": "Tv in diretta",
     "TitleSync": "Sincronizza",
+    "ButtonDonate": "Donazione",
     "ErrorLaunchingChromecast": "Si \u00e8 verificato un errore all'avvio di chromecast. Assicurati che il tuo dispositivo sia connesso alla rete wireless.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
@@ -174,6 +177,9 @@
     "OptionThursday": "Gioved\u00ec",
     "OptionFriday": "Venerd\u00ec",
     "OptionSaturday": "Sabato",
+    "OptionEveryday": "Tutti i giorni",
+    "OptionWeekend": "Weekends",
+    "OptionWeekday": "Weekdays",
     "HeaderConfirmDeletion": "Conferma Cancellazione",
     "MessageConfirmPathSubstitutionDeletion": "Sei sicuro di voler cancellare questa sostituzione percorso?",
     "LiveTvUpdateAvailable": "(Aggiornamento disponibile)",
