--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
@@ -35,8 +35,11 @@
     "HeaderConfirmation": "Bekreftelse",
     "MessageKeyUpdated": "Takk. Din supportern\u00f8kkel har blitt oppdatert.",
     "MessageKeyRemoved": "Takk. Din supportern\u00f8kkel har blitt fjernet.",
+    "HeaderSupportTheTeam": "Support the Emby Team",
+    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
     "TitleLiveTV": "Live TV",
     "TitleSync": "Synk",
+    "ButtonDonate": "Don\u00e9r",
     "ErrorLaunchingChromecast": "Det var en feil ved start av Chromecast. Vennligst forsikre deg om at enheten har korrekt forbindelse til ditt tr\u00e5dl\u00f8se nettverk.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
@@ -174,6 +177,9 @@
     "OptionThursday": "Torsdag",
     "OptionFriday": "Fredag",
     "OptionSaturday": "L\u00f8rdag",
+    "OptionEveryday": "Hver dag",
+    "OptionWeekend": "Weekends",
+    "OptionWeekday": "Weekdays",
     "HeaderConfirmDeletion": "Bekreft Kansellering",
     "MessageConfirmPathSubstitutionDeletion": "Er du sikker p\u00e5 at du vil slette sti erstatter?",
     "LiveTvUpdateAvailable": "(Oppdatering tilgjengelig)",
