--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
@@ -35,8 +35,11 @@
     "HeaderConfirmation": "Bevestiging",
     "MessageKeyUpdated": "Dank u. Uw supporter sleutel is bijgewerkt.",
     "MessageKeyRemoved": "Dank u. Uw supporter sleutel is verwijderd.",
+    "HeaderSupportTheTeam": "Ondersteun het Emby Team",
+    "TextEnjoyBonusFeatures": "Geniet van Bonus Features",
     "TitleLiveTV": "Live TV",
     "TitleSync": "Synchroniseer",
+    "ButtonDonate": "Doneren",
     "ErrorLaunchingChromecast": "Er is een fout opgetreden bij het starten van chromecast. Zorg ervoor dat uw apparaat is aangesloten op uw draadloze netwerk.",
     "MessageErrorLoadingSupporterInfo": "Er is een fout opgetreden bij het laden van uw supporter informatie. Probeer het later opnieuw.",
     "MessageLinkYourSupporterKey": "Koppel uw supporters sleutel met maximaal {0} Emby Connect leden om te genieten van gratis toegang tot de volgende apps:",
@@ -174,6 +177,9 @@
     "OptionThursday": "Donderdag",
     "OptionFriday": "Vrijdag",
     "OptionSaturday": "Zaterdag",
+    "OptionEveryday": "Elke dag",
+    "OptionWeekend": "Weekenden",
+    "OptionWeekday": "Weekdagen",
     "HeaderConfirmDeletion": "Bevestigen Verwijdering",
     "MessageConfirmPathSubstitutionDeletion": "Weet u zeker dat u dit pad vervanging wilt verwijderen?",
     "LiveTvUpdateAvailable": "(Update beschikbaar)",
@@ -693,7 +699,7 @@
     "DeleteDeviceConfirmation": "Weet u zeker dat u dit apparaat wilt verwijderen? Het zal opnieuw verschijnen als een gebruiker zich hiermee aanmeldt.",
     "LabelEnableCameraUploadFor": "Schakel camera upload in voor:",
     "HeaderSelectUploadPath": "Kies upload pad",
-    "LabelEnableCameraUploadForHelp": "Uploads will occur automatically in the background when signed into Emby.",
+    "LabelEnableCameraUploadForHelp": "Uploads zullen automatisch op de achtergrond plaatsvinden wanneer bij Emby aangemeld is.",
     "ErrorMessageStartHourGreaterThanEnd": "Eind tijd moet na de start tijd liggen.",
     "ButtonLibraryAccess": "Bibliotheek toegang",
     "ButtonParentalControl": "Ouderlijk toezicht",
