--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -35,8 +35,11 @@
     "HeaderConfirmation": "Confirma\u00e7\u00e3o",
     "MessageKeyUpdated": "Obrigado. Sua chave de colaborador foi atualizada.",
     "MessageKeyRemoved": "Obrigado. Sua chave de colaborador foi removida.",
+    "HeaderSupportTheTeam": "Colabore com o Time do Emby",
+    "TextEnjoyBonusFeatures": "Aproveite Funcionalidades Extras",
     "TitleLiveTV": "TV ao Vivo",
     "TitleSync": "Sinc",
+    "ButtonDonate": "Doar",
     "ErrorLaunchingChromecast": "Ocorreu um erro ao iniciar o chromecast. Por favor verifique se seu dispositivo est\u00e1 conectado \u00e0 sua rede sem fio.",
     "MessageErrorLoadingSupporterInfo": "Ocorreu um erro ao carregar a informa\u00e7\u00e3o do colaborador. Por favor, tente novamente mais tarde.",
     "MessageLinkYourSupporterKey": "Associe sua chave de colaborador com at\u00e9 {0} membros do Emby Connect para desfrutar acesso gr\u00e1tis \u00e0s seguintes apps:",
@@ -174,6 +177,9 @@
     "OptionThursday": "Quinta-feira",
     "OptionFriday": "Sexta-feira",
     "OptionSaturday": "S\u00e1bado",
+    "OptionEveryday": "Todos os dias",
+    "OptionWeekend": "Fins-de-semana",
+    "OptionWeekday": "Dias da semana",
     "HeaderConfirmDeletion": "Confirmar Exclus\u00e3o",
     "MessageConfirmPathSubstitutionDeletion": "Deseja realmente excluir esta substitui\u00e7\u00e3o de caminho?",
     "LiveTvUpdateAvailable": "(Atualiza\u00e7\u00e3o dispon\u00edvel)",
