--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/sv.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/sv.json
@@ -35,8 +35,11 @@
     "HeaderConfirmation": "Bekr\u00e4ftelse",
     "MessageKeyUpdated": "Tack. Din donationskod har uppdaterats.",
     "MessageKeyRemoved": "Tack. Din donationskod har raderats.",
+    "HeaderSupportTheTeam": "Support the Emby Team",
+    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
     "TitleLiveTV": "Live-TV",
     "TitleSync": "Sync",
+    "ButtonDonate": "Donera",
     "ErrorLaunchingChromecast": "Det gick inte att starta Chromecast. Kontrollera att enheten \u00e4r ansluten till det tr\u00e5dl\u00f6sa n\u00e4tverket.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
@@ -174,6 +177,9 @@
     "OptionThursday": "Torsdag",
     "OptionFriday": "Fredag",
     "OptionSaturday": "L\u00f6rdag",
+    "OptionEveryday": "Varje dag",
+    "OptionWeekend": "Weekends",
+    "OptionWeekday": "Weekdays",
     "HeaderConfirmDeletion": "Bekr\u00e4fta radering",
     "MessageConfirmPathSubstitutionDeletion": "Vill du verkligen ta bort detta s\u00f6kv\u00e4gsutbyte?",
     "LiveTvUpdateAvailable": "(Uppdatering tillg\u00e4nglig)",
