--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
@@ -35,8 +35,11 @@
     "HeaderConfirmation": "\u786e\u8ba4",
     "MessageKeyUpdated": "\u8c22\u8c22\u3002\u4f60\u7684\u652f\u6301\u8005\u5e8f\u53f7\u5df2\u66f4\u65b0\u3002",
     "MessageKeyRemoved": "\u8c22\u8c22\u3002\u4f60\u7684\u652f\u6301\u8005\u5e8f\u53f7\u5df2\u79fb\u9664\u3002",
+    "HeaderSupportTheTeam": "Support the Emby Team",
+    "TextEnjoyBonusFeatures": "\u4eab\u53d7\u5956\u52b1\u529f\u80fd",
     "TitleLiveTV": "\u7535\u89c6\u76f4\u64ad",
     "TitleSync": "\u540c\u6b65",
+    "ButtonDonate": "\u6350\u8d60",
     "ErrorLaunchingChromecast": "\u542f\u52a8chromecast\u9047\u5230\u9519\u8bef\uff0c\u8bf7\u786e\u8ba4\u8bbe\u5907\u5df2\u7ecf\u8fde\u63a5\u5230\u4f60\u7684\u65e0\u7ebf\u7f51\u7edc\u3002",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
@@ -174,6 +177,9 @@
     "OptionThursday": "\u661f\u671f\u56db",
     "OptionFriday": "\u661f\u671f\u4e94",
     "OptionSaturday": "\u661f\u671f\u516d",
+    "OptionEveryday": "Every day",
+    "OptionWeekend": "Weekends",
+    "OptionWeekday": "Weekdays",
     "HeaderConfirmDeletion": "\u786e\u8ba4\u5220\u9664",
     "MessageConfirmPathSubstitutionDeletion": "\u4f60\u786e\u5b9a\u5e0c\u671b\u5220\u9664\u6b64\u8def\u5f84\u66ff\u4ee3\uff1f",
     "LiveTvUpdateAvailable": "(\u66f4\u65b0\u53ef\u7528)",
