--- a/MediaBrowser.Server.Implementations/Localization/Server/da.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/da.json
@@ -4,7 +4,7 @@
     "LabelGithub": "Github",
     "LabelSwagger": "Swagger",
     "LabelStandard": "Standard",
-    "LabelApiDocumentation": "Api Documentation",
+    "LabelApiDocumentation": "Api dokumentation",
     "LabelDeveloperResources": "Developer Resources",
     "LabelBrowseLibrary": "Gennemse biblitek",
     "LabelConfigureServer": "Configure Emby",
@@ -15,7 +15,7 @@
     "LabelFinish": "Slut",
     "LabelNext": "N\u00e6ste",
     "LabelYoureDone": "Du er f\u00e6rdig!",
-    "WelcomeToProject": "Welcome to Emby!",
+    "WelcomeToProject": "Velkommen til Emby!",
     "ThisWizardWillGuideYou": "Denne guide vil hj\u00e6lpe dig igennem ops\u00e6tningen. For at begynde, venligst v\u00e6lg dit fortrukne sprog.",
     "TellUsAboutYourself": "Fort\u00e6l os lidt om dig selv",
     "ButtonQuickStartGuide": "Quick start guide",
@@ -49,17 +49,19 @@
     "ButtonOrganize": "Organize",
     "LinkedToEmbyConnect": "Linked to Emby Connect",
     "HeaderSupporterBenefits": "Supporter Benefits",
-    "HeaderAddUser": "Add User",
+    "HeaderAddUser": "Tilf\u00f8j bruger",
     "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
-    "LabelPinCode": "Pin code:",
+    "LabelPinCode": "Pin kode:",
+    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
+    "HeaderSync": "Sync",
     "ButtonOk": "Ok",
     "ButtonCancel": "Annuller",
-    "ButtonExit": "Exit",
+    "ButtonExit": "Afslut",
     "ButtonNew": "Ny",
     "HeaderTV": "TV",
     "HeaderAudio": "Audio",
     "HeaderVideo": "Video",
-    "HeaderPaths": "Paths",
+    "HeaderPaths": "Stier",
     "CategorySync": "Sync",
     "TabPlaylist": "Playlist",
     "HeaderEasyPinCode": "Easy Pin Code",
@@ -80,23 +82,23 @@
     "LabelCustomCertificatePath": "Custom certificate path:",
     "LabelCustomCertificatePathHelp": "Supply your own ssl certificate .pfx file. If omitted, the server will create a self-signed certificate.",
     "TitleNotifications": "Notifications",
-    "ButtonDonateWithPayPal": "Donate with PayPal",
+    "ButtonDonateWithPayPal": "Doner via PayPal",
     "OptionDetectArchiveFilesAsMedia": "Detect archive files as media",
     "OptionDetectArchiveFilesAsMediaHelp": "If enabled, files with .rar and .zip extensions will be detected as media files.",
-    "LabelEnterConnectUserName": "User name or email:",
+    "LabelEnterConnectUserName": "Brugernavn eller e-mail:",
     "LabelEnterConnectUserNameHelp": "This is your Emby online account user name or password.",
     "LabelEnableEnhancedMovies": "Enable enhanced movie displays",
     "LabelEnableEnhancedMoviesHelp": "When enabled, movies will be displayed as folders to include trailers, extras, cast & crew, and other related content.",
     "HeaderSyncJobInfo": "Sync Job",
     "FolderTypeMixed": "Mixed content",
-    "FolderTypeMovies": "Movies",
-    "FolderTypeMusic": "Music",
-    "FolderTypeAdultVideos": "Adult videos",
-    "FolderTypePhotos": "Photos",
-    "FolderTypeMusicVideos": "Music videos",
-    "FolderTypeHomeVideos": "Home videos",
-    "FolderTypeGames": "Games",
-    "FolderTypeBooks": "Books",
+    "FolderTypeMovies": "FIlm",
+    "FolderTypeMusic": "Musik",
+    "FolderTypeAdultVideos": "Voksenfilm",
+    "FolderTypePhotos": "Fotos",
+    "FolderTypeMusicVideos": "Musikvideoer",
+    "FolderTypeHomeVideos": "Hjemmevideoer",
+    "FolderTypeGames": "Spil",
+    "FolderTypeBooks": "B\u00f8ger",
     "FolderTypeTvShows": "TV",
     "FolderTypeInherit": "Inherit",
     "LabelContentType": "Content type:",
@@ -122,7 +124,7 @@
     "TabProfile": "Profil",
     "TabMetadata": "Metadata",
     "TabImages": "Billeder",
-    "TabNotifications": "Notifications",
+    "TabNotifications": "Notifikationer",
     "TabCollectionTitles": "Titler",
     "HeaderDeviceAccess": "Device Access",
     "OptionEnableAccessFromAllDevices": "Enable access from all devices",
@@ -146,8 +148,8 @@
     "TabProfiles": "Profiler",
     "TabSecurity": "Sikkerhed",
     "ButtonAddUser": "Tilf\u00f8j bruger",
-    "ButtonAddLocalUser": "Add Local User",
-    "ButtonInviteUser": "Invite User",
+    "ButtonAddLocalUser": "Tilf\u00f8j lokal bruger",
+    "ButtonInviteUser": "Inviter bruger",
     "ButtonSave": "Gem",
     "ButtonResetPassword": "Nulstil kode",
     "LabelNewPassword": "Ny kode:",
@@ -159,7 +161,7 @@
     "LibraryAccessHelp": "V\u00e6lg hvilke medie mapper der skal deles med denne bruger. Administratorer vil kunne redigere alle mapper ved hj\u00e6lp af metadata administratoren.",
     "ChannelAccessHelp": "Select the channels to share with this user. Administrators will be able to edit all channels using the metadata manager.",
     "ButtonDeleteImage": "Slet Billede",
-    "LabelSelectUsers": "Select users:",
+    "LabelSelectUsers": "V\u00e6lg brugere:",
     "ButtonUpload": "Upload",
     "HeaderUploadNewImage": "Upload Nyt Billede",
     "LabelDropImageHere": "Drop image here",
@@ -167,6 +169,7 @@
     "MessageNothingHere": "Her er ingenting.",
     "MessagePleaseEnsureInternetMetadata": "V\u00e6r venligst sikker p\u00e5 at hentning af internet metadata er aktiveret.",
     "TabSuggested": "Foresl\u00e5et",
+    "TabSuggestions": "Suggestions",
     "TabLatest": "Seneste",
     "TabUpcoming": "Kommende",
     "TabShows": "Shows",
@@ -902,8 +905,8 @@
     "OptionDefaultSort": "Default",
     "OptionCommunityMostWatchedSort": "Most Watched",
     "TabNextUp": "Next Up",
+    "PlaceholderUsername": "Username",
     "HeaderBecomeProjectSupporter": "Become an Emby Supporter",
-    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
     "MessageNoMovieSuggestionsAvailable": "No movie suggestions are currently available. Start watching and rating your movies, and then come back to view your recommendations.",
     "MessageNoCollectionsAvailable": "Collections allow you to enjoy personalized groupings of Movies, Series, Albums, Books and Games. Click the + button to start creating Collections.",
     "MessageNoPlaylistsAvailable": "Playlists allow you to create lists of content to play consecutively at a time. To add items to playlists, right click or tap and hold, then select Add to Playlist.",
@@ -1381,10 +1384,16 @@
     "LabelEnableInternetMetadataForTvPrograms": "Download internet metadata for:",
     "OptionTVMovies": "TV Movies",
     "HeaderUpcomingMovies": "Upcoming Movies",
+    "HeaderUpcomingSports": "Upcoming Sports",
     "HeaderUpcomingPrograms": "Upcoming Programs",
     "ButtonMoreItems": "More...",
     "LabelShowLibraryTileNames": "Show library tile names",
     "LabelShowLibraryTileNamesHelp": "Determines if labels will be displayed underneath library tiles on the home page",
     "OptionEnableTranscodingThrottle": "Enable throttling",
-    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback."
+    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback.",
+    "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
+    "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
+    "HeaderPlayback": "Media Playback",
+    "OptionAllowMediaPlaybackTranscoding": "Allow media playback that requires transcoding",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly error messages when content is unplayable based on their policy."
 }
