--- a/MediaBrowser.Server.Implementations/Localization/Server/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/de.json
@@ -29,7 +29,7 @@
     "WizardCompleted": "Das ist alles was wir bis jetzt brauchen. Emby hat nun angefangen Informationen \u00fcber Ihre Medienbibliothek zu sammeln. Schauen Sie sich ein paar unserer Apps an, dann Klicken Sie auf <b>Fertig<\/b> um das <b>Server Dashboard<\/b> anzuzeigen.",
     "LabelConfigureSettings": "Konfiguriere Einstellungen",
     "LabelEnableVideoImageExtraction": "Aktiviere Videobild-Extrahierung",
-    "VideoImageExtractionHelp": "F\u00fcr Videos die noch keien Bilder haben, und f\u00fcr die wir keine Internetbilder finden k\u00f6nnen. Hierdurch wird der erste Bibliothekenscan etwas mehr Zeit beanspruchen, f\u00fchrt aber zu einer ansprechenderen Pr\u00e4sentation.",
+    "VideoImageExtractionHelp": "F\u00fcr Videos die noch keinen Bilder haben, und f\u00fcr die wir keine Internetbilder finden k\u00f6nnen. Hierdurch wird der erste Bibliotheken scan etwas mehr Zeit beanspruchen, f\u00fchrt aber zu einer ansprechenderen Pr\u00e4sentation.",
     "LabelEnableChapterImageExtractionForMovies": "Extrahiere Kapitelbilder f\u00fcr Filme",
     "LabelChapterImageExtractionForMoviesHelp": "Das Extrahieren von Kapitel-Bildern erm\u00f6glicht es den Clients eine grafische Szenenauswahl anzubieten. Das Erstellen ist recht langsam, rechenintensiv und erfordert einige Gigabyte an freien Speicherplatz. Diese Aufgabe startet jede Nacht, das kann aber in den geplanten Aufgaben ge\u00e4ndert werden. Es wird nicht empfohlen diese Aufgabe in Zeiten hoher Server-Auslastung zu starten.",
     "LabelEnableAutomaticPortMapping": "Aktiviere automatische Portweiterleitung",
@@ -52,6 +52,8 @@
     "HeaderAddUser": "Benutzer hinzuf\u00fcgen",
     "LabelAddConnectSupporterHelp": "Um einen Benutzer hinzuzuf\u00fcgen, der nicht angezeigt wird, m\u00fcssen Sie diesen erst mit Emby Connect von seinem Benutzerprofil verbinden.",
     "LabelPinCode": "PIN Code:",
+    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
+    "HeaderSync": "Sync",
     "ButtonOk": "Ok",
     "ButtonCancel": "Abbrechen",
     "ButtonExit": "Exit",
@@ -167,6 +169,7 @@
     "MessageNothingHere": "Nichts hier.",
     "MessagePleaseEnsureInternetMetadata": "Bitte sicherstellen, dass das Herunterladen von Internet Metadaten aktiviert ist.",
     "TabSuggested": "Vorgeschlagen",
+    "TabSuggestions": "Suggestions",
     "TabLatest": "Neueste",
     "TabUpcoming": "Bevorstehend",
     "TabShows": "Serien",
@@ -902,8 +905,8 @@
     "OptionDefaultSort": "Default",
     "OptionCommunityMostWatchedSort": "Meistgesehen",
     "TabNextUp": "Als N\u00e4chstes",
+    "PlaceholderUsername": "Username",
     "HeaderBecomeProjectSupporter": "Werden Sie Emby Unterst\u00fctzer",
-    "TextEnjoyBonusFeatures": "Erleben Sie Bonus Funktionen",
     "MessageNoMovieSuggestionsAvailable": "Momentan sind keine Filmvorschl\u00e4ge verf\u00fcgbar. Schaue und bewerte zuerst deine Filme. Komme danach zur\u00fcck, um deine Filmvorschl\u00e4ge anzuschauen.",
     "MessageNoCollectionsAvailable": "Sammlungen erlauben Ihnen eine personalisierte Gruppierung von Filmen, Serien, Alben, B\u00fcchern und Spielen. Klicken Sie die + Schaltfl\u00e4che um Sammlungen zu erstellen.",
     "MessageNoPlaylistsAvailable": "Wiedergabeliste erlauben es dir eine Liste mit Inhalt zu erstellen der fortlaufend abgespielt wird. Um einer Wiedergabeliste Inhalte hinzuzuf\u00fcgen klicke rechts oder mache einen langen Tap und w\u00e4hle daraufhin \"Zur Wiedergabeliste hinzuf\u00fcgen\" aus.",
@@ -1381,10 +1384,16 @@
     "LabelEnableInternetMetadataForTvPrograms": "Lade Internet Metadaten f\u00fcr:",
     "OptionTVMovies": "TV Filme",
     "HeaderUpcomingMovies": "Bevorstehende Filme",
+    "HeaderUpcomingSports": "Upcoming Sports",
     "HeaderUpcomingPrograms": "Bevorstehende Programme",
     "ButtonMoreItems": "Mehr...",
     "LabelShowLibraryTileNames": "Zeige Bibliothek Kachelnamen.",
     "LabelShowLibraryTileNamesHelp": "Legen Sie fest, ob Beschriftungen unter den Kacheln der Startseite angezeigt werden sollen.",
-    "OptionEnableTranscodingThrottle": "Enable throttling",
-    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback."
+    "OptionEnableTranscodingThrottle": "aktiviere Drosselung",
+    "OptionEnableTranscodingThrottleHelp": "Die Drosselung justiert die Transkodier-Geschwindigkeit, um die Server CPU Auslastung w\u00e4hrend der Wiedergabe zu minimieren.",
+    "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
+    "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
+    "HeaderPlayback": "Media Playback",
+    "OptionAllowMediaPlaybackTranscoding": "Allow media playback that requires transcoding",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly error messages when content is unplayable based on their policy."
 }
