--- a/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
@@ -52,6 +52,8 @@
     "HeaderAddUser": "Agregar Usuario",
     "LabelAddConnectSupporterHelp": "Para agregar un usuario que no esta listado, necesita primero enlazar su cuenta a Emby Connect desde su pagina de perfil de usuario.",
     "LabelPinCode": "C\u00f3digo pin:",
+    "OptionHideWatchedContentFromLatestMedia": "Ocultar contenido ya visto de medios recientes",
+    "HeaderSync": "Sinc",
     "ButtonOk": "Ok",
     "ButtonCancel": "Cancelar",
     "ButtonExit": "Salir",
@@ -167,6 +169,7 @@
     "MessageNothingHere": "Nada aqu\u00ed.",
     "MessagePleaseEnsureInternetMetadata": "Por favor aseg\u00farese que la descarga de metadatos de internet esta habilitada.",
     "TabSuggested": "Sugerencias",
+    "TabSuggestions": "Sugerencias",
     "TabLatest": "Recientes",
     "TabUpcoming": "Por Estrenar",
     "TabShows": "Programas",
@@ -902,8 +905,8 @@
     "OptionDefaultSort": "Por defecto",
     "OptionCommunityMostWatchedSort": "M\u00e1s Visto",
     "TabNextUp": "A Continuaci\u00f3n",
+    "PlaceholderUsername": "Nombre de Usuario",
     "HeaderBecomeProjectSupporter": "Convi\u00e9rtete en un Fan\u00e1tico Emby",
-    "TextEnjoyBonusFeatures": "Disfruta de Caracter\u00edsticas Premium",
     "MessageNoMovieSuggestionsAvailable": "No hay sugerencias de pel\u00edculas disponibles en este momento. Comienza a ver y a calificar tus pel\u00edculas, y regresa para ver tus recomendaciones.",
     "MessageNoCollectionsAvailable": "Las colecciones le permiten disfrutar de agrupaciones personalizadas de Pel\u00edculas, Series, \u00c1lbumes, Libros y Juegos. Haga clic en el bot\u00f3n + para iniciar la creaci\u00f3n de Colecciones.",
     "MessageNoPlaylistsAvailable": "Las listas de reproducci\u00f3n le permiten crear listas de contenidos a ser reproducidos de manera consecutiva. Para agregar \u00edtems a una lista de reproducci\u00f3n, haga clic derecho o seleccione y mantenga, despu\u00e9s seleccione Agregar a Lista de Reproducci\u00f3n.",
@@ -1381,10 +1384,16 @@
     "LabelEnableInternetMetadataForTvPrograms": "Descargar metadatos de Internet para:",
     "OptionTVMovies": "Pel\u00edculas de TV",
     "HeaderUpcomingMovies": "Pel\u00edculas por Estrenar",
+    "HeaderUpcomingSports": "Deportes por Estrenar",
     "HeaderUpcomingPrograms": "Programas por Estrenar",
     "ButtonMoreItems": "M\u00e1s...",
     "LabelShowLibraryTileNames": "Mostrar nombres de t\u00edtulo de las bibliotecas",
     "LabelShowLibraryTileNamesHelp": "Determina si se desplegar\u00e1n etiquetas debajo de los t\u00edtulos de las bibliotecas con la p\u00e1gina principal",
-    "OptionEnableTranscodingThrottle": "Enable throttling",
-    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback."
+    "OptionEnableTranscodingThrottle": "Habilitar contenci\u00f3n",
+    "OptionEnableTranscodingThrottleHelp": "La contenci\u00f3n permite ajustar autom\u00e1ticamente la velocidad de transcodificaci\u00f3n para minimizar la utilizaci\u00f3n del procesador en el servidor durante la reproducci\u00f3n.",
+    "LabelUploadSpeedLimit": "L\u00edmite de velocidad de env\u00edo (mbps):",
+    "OptionAllowSyncTranscoding": "Permitir sincronizaci\u00f3n que requiera de transcodificaci\u00f3n",
+    "HeaderPlayback": "Reproducci\u00f3n de Medios",
+    "OptionAllowMediaPlaybackTranscoding": "Permitir reproducci\u00f3n de medios que requiera de transcodificaci\u00f3n",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Los usuarios recibir\u00e1n mensajes de error amigables cuando el contenido no pueda ser reproducido de acuerdo a su pol\u00edtica."
 }
