--- a/MediaBrowser.Server.Implementations/Localization/Server/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/fr.json
@@ -52,6 +52,8 @@
     "HeaderAddUser": "Ajouter un utilisateur",
     "LabelAddConnectSupporterHelp": "Pour ajouter un utilisateur non list\u00e9, vous devrez d'abord lier son compte \u00e0 Emby Connect depuis sa page de profil utilisateur.",
     "LabelPinCode": "Code PIN:",
+    "OptionHideWatchedContentFromLatestMedia": "Masquer le contenu d\u00e9j\u00e0 vu dans les derniers m\u00e9dias",
+    "HeaderSync": "Sync",
     "ButtonOk": "Ok",
     "ButtonCancel": "Annuler",
     "ButtonExit": "Sortie",
@@ -167,6 +169,7 @@
     "MessageNothingHere": "Rien ici.",
     "MessagePleaseEnsureInternetMetadata": "Veuillez vous assurer que le t\u00e9l\u00e9chargement des m\u00e9tadonn\u00e9es depuis Internet est activ\u00e9.",
     "TabSuggested": "Sugg\u00e9r\u00e9s",
+    "TabSuggestions": "Suggestions",
     "TabLatest": "Plus r\u00e9cents",
     "TabUpcoming": "\u00c0 venir",
     "TabShows": "S\u00e9ries",
@@ -902,8 +905,8 @@
     "OptionDefaultSort": "Par d\u00e9faut",
     "OptionCommunityMostWatchedSort": "Les plus lus",
     "TabNextUp": "Prochains \u00e0 voir",
+    "PlaceholderUsername": "Identifiant",
     "HeaderBecomeProjectSupporter": "Devenir un fan d'Emby",
-    "TextEnjoyBonusFeatures": "Profitez bien des fonctionnalit\u00e9s bonus",
     "MessageNoMovieSuggestionsAvailable": "Aucune suggestion de film n'est actuellement disponible. Commencez \u00e0 regarder et notez vos films pour avoir des suggestions.",
     "MessageNoCollectionsAvailable": "Les collections vous permettent de tirer parti de groupements personnalis\u00e9s de films, de s\u00e9ries, d'albums audio, de livres et de jeux. Cliquez sur le bouton + pour commencer \u00e0 cr\u00e9er des Collections.",
     "MessageNoPlaylistsAvailable": "Les listes de lectures vous permettent de cr\u00e9er des listes de contenus \u00e0 lire en continu en une fois. Pour ajouter un \u00e9l\u00e9ment \u00e0 la liste, faire un clic droit ou appuyer et maintenez, puis s\u00e9lectionnez Ajouter \u00e0 la liste de lecture",
@@ -1381,10 +1384,16 @@
     "LabelEnableInternetMetadataForTvPrograms": "T\u00e9l\u00e9charger les m\u00e9ta-donn\u00e9es depuis Internet pour :",
     "OptionTVMovies": "T\u00e9l\u00e9films",
     "HeaderUpcomingMovies": "Films \u00e0 venir",
+    "HeaderUpcomingSports": "Upcoming Sports",
     "HeaderUpcomingPrograms": "Programmes \u00e0 venir",
     "ButtonMoreItems": "Plus...",
     "LabelShowLibraryTileNames": "Voir les noms des affiches de la biblioth\u00e8que",
     "LabelShowLibraryTileNamesHelp": "D\u00e9termine si les noms doivent \u00eatre affich\u00e9s en dessous des affiches de la biblioth\u00e8que sur la page d'accueil",
-    "OptionEnableTranscodingThrottle": "Enable throttling",
-    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback."
+    "OptionEnableTranscodingThrottle": "Activer le throttling",
+    "OptionEnableTranscodingThrottleHelp": "Le throttling consiste \u00e0 ajuster automatiquement la fr\u00e9quence de transcodage afin de minimiser l'utilisation CPU pendant la lecture.",
+    "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
+    "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
+    "HeaderPlayback": "Media Playback",
+    "OptionAllowMediaPlaybackTranscoding": "Allow media playback that requires transcoding",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly error messages when content is unplayable based on their policy."
 }
