--- a/MediaBrowser.Server.Implementations/Localization/Server/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nl.json
@@ -52,6 +52,8 @@
     "HeaderAddUser": "Gebruiker Toevoegen",
     "LabelAddConnectSupporterHelp": "Om een \u200b\u200bgebruiker toe te voegen die niet in de lijst voorkomt, moet je eerst hun account koppelen aan Emby Connect uit hun gebruikersprofiel pagina.",
     "LabelPinCode": "Pincode:",
+    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
+    "HeaderSync": "Sync",
     "ButtonOk": "Ok",
     "ButtonCancel": "Annuleren",
     "ButtonExit": "Afsluiten",
@@ -167,6 +169,7 @@
     "MessageNothingHere": "Lijst is leeg.",
     "MessagePleaseEnsureInternetMetadata": "Zorg ervoor dat het downloaden van metadata van het internet is ingeschakeld.",
     "TabSuggested": "Aanbevolen",
+    "TabSuggestions": "Suggesties",
     "TabLatest": "Nieuw",
     "TabUpcoming": "Binnenkort op TV",
     "TabShows": "Series",
@@ -902,8 +905,8 @@
     "OptionDefaultSort": "Standaard",
     "OptionCommunityMostWatchedSort": "Meest bekeken",
     "TabNextUp": "Volgend",
+    "PlaceholderUsername": "Gebruikersnaam",
     "HeaderBecomeProjectSupporter": "Wordt Emby Supporter",
-    "TextEnjoyBonusFeatures": "Geniet van Bonus Features",
     "MessageNoMovieSuggestionsAvailable": "Er zijn momenteel geen film suggesties beschikbaar. Begin met het bekijken en waardeer uw films, kom daarna terug om uw aanbevelingen te bekijken.",
     "MessageNoCollectionsAvailable": "Collecties maken het u mogelijk om Films, Series, Albums, Boeken en Games te groeperen. Klik op de + knop om Collecties aan te maken.",
     "MessageNoPlaylistsAvailable": "Met afspeellijsten kunt u een lijst maken waarvan de items achter elkaar afgespeeld worden. Om een item toe te voegen klikt u met rechts of tik en houd het vast om het te selecteren, klik vervolgens op Toevoegen aan afspeellijst.",
@@ -1381,10 +1384,16 @@
     "LabelEnableInternetMetadataForTvPrograms": "Download internet metadata voor:",
     "OptionTVMovies": "TV Movies",
     "HeaderUpcomingMovies": "Aankomende Films",
+    "HeaderUpcomingSports": "Upcoming Sports",
     "HeaderUpcomingPrograms": "Aankomende Programma's",
     "ButtonMoreItems": "Meer...",
     "LabelShowLibraryTileNames": "Toon bibliotheek tegel namen",
     "LabelShowLibraryTileNamesHelp": "Bepaalt of labels onder de bibliotheek tegels zullen worden weergegeven op de startpagina",
     "OptionEnableTranscodingThrottle": "Enable throttling",
-    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback."
+    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback.",
+    "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
+    "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
+    "HeaderPlayback": "Media Playback",
+    "OptionAllowMediaPlaybackTranscoding": "Allow media playback that requires transcoding",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly error messages when content is unplayable based on their policy."
 }
