--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
@@ -52,6 +52,8 @@
     "HeaderAddUser": "Adicionar Usu\u00e1rio",
     "LabelAddConnectSupporterHelp": "Para adicionar um usu\u00e1rio que n\u00e3o esteja listado, voc\u00ea precisar\u00e1 associar sua conta ao Emby Connect na sua p\u00e1gina de perfil.",
     "LabelPinCode": "C\u00f3digo Pin:",
+    "OptionHideWatchedContentFromLatestMedia": "Ocultar conte\u00fado j\u00e1 assistido das m\u00eddias recentes",
+    "HeaderSync": "Sincroniza\u00e7\u00e3o",
     "ButtonOk": "Ok",
     "ButtonCancel": "Cancelar",
     "ButtonExit": "Sair",
@@ -167,6 +169,7 @@
     "MessageNothingHere": "Nada aqui.",
     "MessagePleaseEnsureInternetMetadata": "Por favor, certifique-se que o download de metadados da internet est\u00e1 habilitado.",
     "TabSuggested": "Sugeridos",
+    "TabSuggestions": "Sugest\u00f5es",
     "TabLatest": "Recentes",
     "TabUpcoming": "Por Estrear",
     "TabShows": "S\u00e9ries",
@@ -902,8 +905,8 @@
     "OptionDefaultSort": "Padr\u00e3o",
     "OptionCommunityMostWatchedSort": "Mais Assistidos",
     "TabNextUp": "Pr\u00f3ximos",
+    "PlaceholderUsername": "Nome do usu\u00e1rio",
     "HeaderBecomeProjectSupporter": "Torne-se um Colaborador do Emby",
-    "TextEnjoyBonusFeatures": "Aproveite Funcionalidades Extras",
     "MessageNoMovieSuggestionsAvailable": "N\u00e3o existem sugest\u00f5es de filmes dispon\u00edveis atualmente. Comece por assistir e avaliar seus filmes e, ent\u00e3o, volte para verificar suas recomenda\u00e7\u00f5es.",
     "MessageNoCollectionsAvailable": "Cole\u00e7\u00f5es permitem que voc\u00ea aproveite grupos personalizados de Filmes, S\u00e9ries, \u00c1lbuns, Livros e Jogos. Clique no bot\u00e3o + para come\u00e7ar a criar Cole\u00e7\u00f5es.",
     "MessageNoPlaylistsAvailable": "Listas de reprodu\u00e7\u00e3o permitem criar listas com conte\u00fado para reproduzir consecutivamente, de uma s\u00f3 vez. Para adicionar itens \u00e0s listas de reprodu\u00e7\u00e3o, clique com o bot\u00e3o direito ou toque a tela por alguns segundos, depois selecione Adicionar \u00e0 Lista de Reprodu\u00e7\u00e3o.",
@@ -1381,10 +1384,16 @@
     "LabelEnableInternetMetadataForTvPrograms": "Fazer download dos metadados da internet para:",
     "OptionTVMovies": "Filmes da TV",
     "HeaderUpcomingMovies": "Filmes Por Estrear",
+    "HeaderUpcomingSports": "Esportes Por Estrear",
     "HeaderUpcomingPrograms": "Programas Por Estrear",
     "ButtonMoreItems": "Mais...",
     "LabelShowLibraryTileNames": "Mostrar os nomes das tiles da biblioteca",
     "LabelShowLibraryTileNamesHelp": "Determina se os t\u00edtulos ser\u00e3o exibidos embaixo das tiles da biblioteca na p\u00e1gina in\u00edcio",
     "OptionEnableTranscodingThrottle": "Ativar controlador de fluxo",
-    "OptionEnableTranscodingThrottleHelp": "O controlador de fluxo ajustar\u00e1 automaticamente a velocidade de transcodifica\u00e7\u00e3o para minimizar o uso da cpu no servidor durante a reprodu\u00e7\u00e3o"
+    "OptionEnableTranscodingThrottleHelp": "O controlador de fluxo ajustar\u00e1 automaticamente a velocidade de transcodifica\u00e7\u00e3o para minimizar o uso da cpu no servidor durante a reprodu\u00e7\u00e3o.",
+    "LabelUploadSpeedLimit": "Limite de velocidade de upload (mbps):",
+    "OptionAllowSyncTranscoding": "Permitir sincroniza\u00e7\u00e3o que necessite de transcodifica\u00e7\u00e3o",
+    "HeaderPlayback": "Reprodu\u00e7\u00e3o de M\u00eddia",
+    "OptionAllowMediaPlaybackTranscoding": "Permitir reprodu\u00e7\u00e3o de m\u00eddia que necessite de transcodifica\u00e7\u00e3o",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Os usu\u00e1rios receber\u00e3o mensagens de erro amig\u00e1veis quando o conte\u00fado n\u00e3o for reproduz\u00edvel, baseado em suas pol\u00edticas."
 }
