--- a/MediaBrowser.Server.Implementations/Localization/Server/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/zh_CN.json
@@ -52,6 +52,8 @@
     "HeaderAddUser": "Add User",
     "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
     "LabelPinCode": "Pin code:",
+    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
+    "HeaderSync": "Sync",
     "ButtonOk": "\u786e\u5b9a",
     "ButtonCancel": "\u53d6\u6d88",
     "ButtonExit": "Exit",
@@ -167,6 +169,7 @@
     "MessageNothingHere": "\u8fd9\u513f\u4ec0\u4e48\u90fd\u6ca1\u6709\u3002",
     "MessagePleaseEnsureInternetMetadata": "\u8bf7\u786e\u4fdd\u5df2\u542f\u7528\u4ece\u4e92\u8054\u7f51\u4e0b\u8f7d\u5a92\u4f53\u8d44\u6599\u3002",
     "TabSuggested": "\u5efa\u8bae",
+    "TabSuggestions": "Suggestions",
     "TabLatest": "\u6700\u65b0",
     "TabUpcoming": "\u5373\u5c06\u53d1\u5e03",
     "TabShows": "\u8282\u76ee",
@@ -902,8 +905,8 @@
     "OptionDefaultSort": "\u9ed8\u8ba4",
     "OptionCommunityMostWatchedSort": "\u6700\u53d7\u77a9\u76ee",
     "TabNextUp": "\u4e0b\u4e00\u4e2a",
+    "PlaceholderUsername": "Username",
     "HeaderBecomeProjectSupporter": "Become an Emby Supporter",
-    "TextEnjoyBonusFeatures": "\u4eab\u53d7\u5956\u52b1\u529f\u80fd",
     "MessageNoMovieSuggestionsAvailable": "\u6ca1\u6709\u53ef\u7528\u7684\u7535\u5f71\u5efa\u8bae\u3002\u5f00\u59cb\u89c2\u770b\u4f60\u7684\u7535\u5f71\u5e76\u8fdb\u884c\u8bc4\u5206\uff0c\u518d\u56de\u8fc7\u5934\u6765\u67e5\u770b\u4f60\u7684\u5efa\u8bae\u3002",
     "MessageNoCollectionsAvailable": "\u5408\u96c6\u8ba9\u4f60\u4eab\u53d7\u7535\u5f71\uff0c\u7cfb\u5217\uff0c\u76f8\u518c\uff0c\u4e66\u7c4d\u548c\u6e38\u620f\u4e2a\u6027\u5316\u7684\u5206\u7ec4\u3002\u5355\u51fb\u201c+\u201d\u6309\u94ae\u5f00\u59cb\u521b\u5efa\u5408\u96c6\u3002",
     "MessageNoPlaylistsAvailable": "\u64ad\u653e\u5217\u8868\u5141\u8bb8\u60a8\u521b\u5efa\u4e00\u4e2a\u5185\u5bb9\u5217\u8868\u6765\u8fde\u7eed\u64ad\u653e\u3002\u5c06\u9879\u76ee\u6dfb\u52a0\u5230\u64ad\u653e\u5217\u8868\uff0c\u53f3\u952e\u5355\u51fb\u6216\u70b9\u51fb\u5e76\u6309\u4f4f\uff0c\u7136\u540e\u9009\u62e9\u201c\u6dfb\u52a0\u5230\u64ad\u653e\u5217\u8868\u201d\u3002",
@@ -1381,10 +1384,16 @@
     "LabelEnableInternetMetadataForTvPrograms": "Download internet metadata for:",
     "OptionTVMovies": "TV Movies",
     "HeaderUpcomingMovies": "Upcoming Movies",
+    "HeaderUpcomingSports": "Upcoming Sports",
     "HeaderUpcomingPrograms": "Upcoming Programs",
     "ButtonMoreItems": "\u66f4\u591a...",
     "LabelShowLibraryTileNames": "Show library tile names",
     "LabelShowLibraryTileNamesHelp": "Determines if labels will be displayed underneath library tiles on the home page",
     "OptionEnableTranscodingThrottle": "Enable throttling",
-    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback."
+    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback.",
+    "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
+    "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
+    "HeaderPlayback": "Media Playback",
+    "OptionAllowMediaPlaybackTranscoding": "Allow media playback that requires transcoding",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly error messages when content is unplayable based on their policy."
 }
