--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/bg_BG.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/bg_BG.json
@@ -35,8 +35,11 @@
     "HeaderConfirmation": "Confirmation",
     "MessageKeyUpdated": "Thank you. Your supporter key has been updated.",
     "MessageKeyRemoved": "Thank you. Your supporter key has been removed.",
+    "HeaderSupportTheTeam": "\u041f\u043e\u0434\u043a\u0440\u0435\u043f\u0435\u0442\u0435 Emby \u041e\u0442\u0431\u043e\u0440\u044a\u0442",
+    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
     "TitleLiveTV": "\u0422V \u043d\u0430 \u0436\u0438\u0432\u043e",
     "TitleSync": "Sync",
+    "ButtonDonate": "Donate",
     "ErrorLaunchingChromecast": "There was an error launching chromecast. Please ensure your device is connected to your wireless network.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
@@ -174,6 +177,9 @@
     "OptionThursday": "\u0427\u0435\u0442\u0432\u044a\u0440\u0442\u044a\u043a",
     "OptionFriday": "\u041f\u0435\u0442\u044a\u043a",
     "OptionSaturday": "\u0421\u044a\u0431\u043e\u0442\u0430",
+    "OptionEveryday": "Every day",
+    "OptionWeekend": "Weekends",
+    "OptionWeekday": "Weekdays",
     "HeaderConfirmDeletion": "Confirm Deletion",
     "MessageConfirmPathSubstitutionDeletion": "Are you sure you wish to delete this path substitution?",
     "LiveTvUpdateAvailable": "(Update available)",
