--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/he.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/he.json
@@ -35,8 +35,11 @@
     "HeaderConfirmation": "Confirmation",
     "MessageKeyUpdated": "Thank you. Your supporter key has been updated.",
     "MessageKeyRemoved": "Thank you. Your supporter key has been removed.",
+    "HeaderSupportTheTeam": "Support the Emby Team",
+    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
     "TitleLiveTV": "\u05d8\u05dc\u05d5\u05d5\u05d9\u05d6\u05d9\u05d4 \u05d7\u05d9\u05d9\u05d4",
     "TitleSync": "Sync",
+    "ButtonDonate": "Donate",
     "ErrorLaunchingChromecast": "There was an error launching chromecast. Please ensure your device is connected to your wireless network.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
@@ -174,6 +177,9 @@
     "OptionThursday": "\u05d7\u05de\u05d9\u05e9\u05d9",
     "OptionFriday": "\u05e9\u05d9\u05e9\u05d9",
     "OptionSaturday": "\u05e9\u05d1\u05ea",
+    "OptionEveryday": "Every day",
+    "OptionWeekend": "Weekends",
+    "OptionWeekday": "Weekdays",
     "HeaderConfirmDeletion": "Confirm Deletion",
     "MessageConfirmPathSubstitutionDeletion": "Are you sure you wish to delete this path substitution?",
     "LiveTvUpdateAvailable": "(Update available)",
