--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_PT.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_PT.json
@@ -35,8 +35,11 @@
     "HeaderConfirmation": "Confirmation",
     "MessageKeyUpdated": "Thank you. Your supporter key has been updated.",
     "MessageKeyRemoved": "Thank you. Your supporter key has been removed.",
+    "HeaderSupportTheTeam": "Support the Emby Team",
+    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
     "TitleLiveTV": "TV ao Vivo",
     "TitleSync": "Sync",
+    "ButtonDonate": "Donate",
     "ErrorLaunchingChromecast": "There was an error launching chromecast. Please ensure your device is connected to your wireless network.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
@@ -79,7 +82,7 @@
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Collection",
-    "HeaderAddToCollection": "Add to Collection",
+    "HeaderAddToCollection": "Adicionar \u00e0 Cole\u00e7\u00e3o",
     "NewCollectionNameExample": "Exemplo: Cole\u00e7\u00e3o Guerra das Estrelas",
     "OptionSearchForInternetMetadata": "Procurar na internet por imagens e metadados",
     "LabelSelectCollection": "Select collection:",
@@ -116,8 +119,8 @@
     "LabelVersionInstalled": "{0} installed",
     "LabelNumberReviews": "{0} Reviews",
     "LabelFree": "Free",
-    "HeaderPlaybackError": "Playback Error",
-    "MessagePlaybackErrorNotAllowed": "You're currently not authorized to play this content. Please contact your system administrator for details.",
+    "HeaderPlaybackError": "Erro na Reprodu\u00e7\u00e3o",
+    "MessagePlaybackErrorNotAllowed": "N\u00e3o est\u00e1 autorizado a reproduzir este conte\u00fado. Por favor, contacte o administrador do sistema para mais detalhes.",
     "MessagePlaybackErrorNoCompatibleStream": "No compatible streams are currently available. Please try again later.",
     "MessagePlaybackErrorRateLimitExceeded": "Your playback rate limit has been exceeded. Please contact your system administrator for details.",
     "MessagePlaybackErrorPlaceHolder": "The content chosen is not playable from this device.",
@@ -174,6 +177,9 @@
     "OptionThursday": "Quinta",
     "OptionFriday": "Sexta",
     "OptionSaturday": "S\u00e1bado",
+    "OptionEveryday": "Every day",
+    "OptionWeekend": "Weekends",
+    "OptionWeekday": "Weekdays",
     "HeaderConfirmDeletion": "Confirm Deletion",
     "MessageConfirmPathSubstitutionDeletion": "Are you sure you wish to delete this path substitution?",
     "LiveTvUpdateAvailable": "(Update available)",
@@ -197,7 +203,7 @@
     "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
     "HeaderResume": "Resumir",
     "HeaderMyViews": "My Views",
-    "HeaderLibraryFolders": "Media Folders",
+    "HeaderLibraryFolders": "Pastas multim\u00e9dia",
     "HeaderLatestMedia": "Latest Media",
     "ButtonMoreItems": "More...",
     "ButtonMore": "More",
@@ -385,7 +391,7 @@
     "LabelPackageInstallCancelled": "{0} installation cancelled.",
     "TabServer": "Servidor",
     "TabUsers": "Users",
-    "TabLibrary": "Library",
+    "TabLibrary": "Biblioteca",
     "TabMetadata": "Metadados",
     "TabDLNA": "DLNA",
     "TabLiveTV": "Live TV",
@@ -648,7 +654,7 @@
     "MediaInfoStreamTypeSubtitle": "Subtitle",
     "MediaInfoStreamTypeEmbeddedImage": "Embedded Image",
     "MediaInfoRefFrames": "Ref frames",
-    "TabPlayback": "Playback",
+    "TabPlayback": "Reprodu\u00e7\u00e3o",
     "TabNotifications": "Notifica\u00e7\u00f5es",
     "TabExpert": "Expert",
     "HeaderSelectCustomIntrosPath": "Select Custom Intros Path",
@@ -677,7 +683,7 @@
     "DashboardTourDashboard": "O Painel Principal do servidor permite monitorizar o seu servidor e os seus utilizadores. Poder\u00e1 sempre saber onde est\u00e3o e o que est\u00e3o a fazer.",
     "DashboardTourHelp": "In-app help provides easy buttons to open wiki pages relating to the on-screen content.",
     "DashboardTourUsers": "Easily create user accounts for your friends and family, each with their own permissions, library access, parental controls and more.",
-    "DashboardTourCinemaMode": "Cinema mode brings the theater experience straight to your living room with the ability to play trailers and custom intros before the main feature.",
+    "DashboardTourCinemaMode": "O modo cinema traz a experi\u00eancia do cinema para a sua sala, possibilitando reproduzir trailers e introdu\u00e7\u00f5es personalizadas antes da longa-metragem.",
     "DashboardTourChapters": "Enable chapter image generation for your videos for a more pleasing presentation while viewing.",
     "DashboardTourSubtitles": "Automatically download subtitles for your videos in any language.",
     "DashboardTourPlugins": "Install plugins such as internet video channels, live tv, metadata scanners, and more.",
