--- a/MediaBrowser.Server.Implementations/Localization/Server/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/it.json
@@ -52,6 +52,8 @@
     "HeaderAddUser": "Add User",
     "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
     "LabelPinCode": "Codice Pin",
+    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
+    "HeaderSync": "Sync",
     "ButtonOk": "OK",
     "ButtonCancel": "Annulla",
     "ButtonExit": "Esci",
@@ -167,6 +169,7 @@
     "MessageNothingHere": "Niente qui.",
     "MessagePleaseEnsureInternetMetadata": "Assicurarsi che il download dei metadati internet sia abilitato.",
     "TabSuggested": "Suggeriti",
+    "TabSuggestions": "Suggestions",
     "TabLatest": "Novit\u00e0",
     "TabUpcoming": "In Arrivo",
     "TabShows": "Serie",
@@ -292,8 +295,8 @@
     "CheckoutKnowledgeBase": "Check out our knowledge base to help you get the most out of Emby.",
     "SearchKnowledgeBase": "Cerca sulla guida online",
     "VisitTheCommunity": "Visita la nostra comunit\u00e0",
-    "VisitProjectWebsite": "Visit the Emby Web Site",
-    "VisitProjectWebsiteLong": "Visit the Emby Web site to catch the latest news and keep up with the developer blog.",
+    "VisitProjectWebsite": "Visita il sito di Emby",
+    "VisitProjectWebsiteLong": "Visita il sito web di Emby per tenerti aggiornato con le ultime novit\u00e0 e le notizie dal blog degli sviluppatori.",
     "OptionHideUser": "Nascondi questo utente dalla schermata di Accesso",
     "OptionHideUserFromLoginHelp": "Utile per account nascosti o amministratore. L'utente avr\u00e0 bisogno di accedere manualmente utilizzando la propria username e password",
     "OptionDisableUser": "Disabilita utente",
@@ -419,7 +422,7 @@
     "LabelNumberOfGuideDays": "Numero di giorni per i quali scaricare i dati della guida:",
     "LabelNumberOfGuideDaysHelp": "Scaricando pi\u00f9 giorni si avr\u00e0 la possibilit\u00e0 di pianificare in anticipo pi\u00f9 programmi e vedere pi\u00f9 liste. 'Auto': MB sceglier\u00e0 automaticamente in base al numero di canali.",
     "OptionAutomatic": "Automatico",
-    "HeaderServices": "Services",
+    "HeaderServices": "Servizi",
     "LiveTvPluginRequired": "E' richiesto il servizio LIVE TV per continuare.",
     "LiveTvPluginRequiredHelp": "Installa un servizio disponibile, come Next Pvr or ServerWMC.",
     "LabelCustomizeOptionsPerMediaType": "Personalizza per il tipo di supporto:",
@@ -581,7 +584,7 @@
     "LabelEpisodeNumber": "Numero Episodio :",
     "LabelEndingEpisodeNumber": "Ultimo Episodio Numero:",
     "LabelEndingEpisodeNumberHelp": "Richiesto solo se ci sono pi\u00f9 file per espisodio",
-    "HeaderSupportTheTeam": "Support the Emby Team",
+    "HeaderSupportTheTeam": "Supporta il Team di Emby",
     "LabelSupportAmount": "Ammontare (Dollari)",
     "HeaderSupportTheTeamHelp": "Aiutaci a continuare nello sviluppo di questo progetto tramite una donazione. una parte delle donazioni verranno impiegate per lo sviluppo di Plugins gratuiti.",
     "ButtonEnterSupporterKey": "Inserisci il numero di registrazione",
@@ -902,8 +905,8 @@
     "OptionDefaultSort": "Predefinito",
     "OptionCommunityMostWatchedSort": "Pi\u00f9 visti",
     "TabNextUp": "Da vedere",
+    "PlaceholderUsername": "Username",
     "HeaderBecomeProjectSupporter": "Become an Emby Supporter",
-    "TextEnjoyBonusFeatures": "Goditi le caratteristiche aggiuntive",
     "MessageNoMovieSuggestionsAvailable": "Nessun suggerimento di film attualmente disponibile. Iniziare a guardare e valutare i vostri film, e poi tornare per i suggerimenti.",
     "MessageNoCollectionsAvailable": "Le collezioni ti permettono di goderti raccolte personalizzate di Film, Serie TV, Album, Libri e Giochi. Clicca sul + per iniziare a creare le tue Collezioni",
     "MessageNoPlaylistsAvailable": "Playlist ti permettere di mettere in coda gli elementi da riprodurre.Usa il tasto destro o tap e tieni premuto quindi seleziona elemento da aggiungere",
@@ -1381,10 +1384,16 @@
     "LabelEnableInternetMetadataForTvPrograms": "Download internet metadata for:",
     "OptionTVMovies": "TV Movies",
     "HeaderUpcomingMovies": "Upcoming Movies",
+    "HeaderUpcomingSports": "Upcoming Sports",
     "HeaderUpcomingPrograms": "Upcoming Programs",
     "ButtonMoreItems": "Pi\u00f9...",
     "LabelShowLibraryTileNames": "Show library tile names",
     "LabelShowLibraryTileNamesHelp": "Determines if labels will be displayed underneath library tiles on the home page",
     "OptionEnableTranscodingThrottle": "Enable throttling",
-    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback."
+    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback.",
+    "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
+    "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
+    "HeaderPlayback": "Media Playback",
+    "OptionAllowMediaPlaybackTranscoding": "Allow media playback that requires transcoding",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly error messages when content is unplayable based on their policy."
 }
