--- a/MediaBrowser.Server.Implementations/Localization/Server/uk.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/uk.json
@@ -52,6 +52,8 @@
     "HeaderAddUser": "Add User",
     "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
     "LabelPinCode": "Pin code:",
+    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
+    "HeaderSync": "Sync",
     "ButtonOk": "Ok",
     "ButtonCancel": "\u0421\u043a\u0430\u0441\u0443\u0432\u0430\u0442\u0438",
     "ButtonExit": "Exit",
@@ -167,6 +169,7 @@
     "MessageNothingHere": "Nothing here.",
     "MessagePleaseEnsureInternetMetadata": "Please ensure downloading of internet metadata is enabled.",
     "TabSuggested": "Suggested",
+    "TabSuggestions": "Suggestions",
     "TabLatest": "Latest",
     "TabUpcoming": "Upcoming",
     "TabShows": "Shows",
@@ -902,8 +905,8 @@
     "OptionDefaultSort": "Default",
     "OptionCommunityMostWatchedSort": "Most Watched",
     "TabNextUp": "Next Up",
+    "PlaceholderUsername": "Username",
     "HeaderBecomeProjectSupporter": "Become an Emby Supporter",
-    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
     "MessageNoMovieSuggestionsAvailable": "No movie suggestions are currently available. Start watching and rating your movies, and then come back to view your recommendations.",
     "MessageNoCollectionsAvailable": "Collections allow you to enjoy personalized groupings of Movies, Series, Albums, Books and Games. Click the + button to start creating Collections.",
     "MessageNoPlaylistsAvailable": "Playlists allow you to create lists of content to play consecutively at a time. To add items to playlists, right click or tap and hold, then select Add to Playlist.",
@@ -1381,10 +1384,16 @@
     "LabelEnableInternetMetadataForTvPrograms": "Download internet metadata for:",
     "OptionTVMovies": "TV Movies",
     "HeaderUpcomingMovies": "Upcoming Movies",
+    "HeaderUpcomingSports": "Upcoming Sports",
     "HeaderUpcomingPrograms": "Upcoming Programs",
     "ButtonMoreItems": "More...",
     "LabelShowLibraryTileNames": "Show library tile names",
     "LabelShowLibraryTileNamesHelp": "Determines if labels will be displayed underneath library tiles on the home page",
     "OptionEnableTranscodingThrottle": "Enable throttling",
-    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback."
+    "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback.",
+    "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
+    "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
+    "HeaderPlayback": "Media Playback",
+    "OptionAllowMediaPlaybackTranscoding": "Allow media playback that requires transcoding",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly error messages when content is unplayable based on their policy."
 }
